[package]
name = "ogg-sys"
version = "0.0.10"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
build = "libogg/build.rs"
links = "ogg"
description = "FFI for libogg, the media container."
license = "MIT"
repository = "https://github.com/tomaka/ogg-sys"

[dependencies]
libc = "0.2.76"

[build-dependencies]
cc = "1.0.59"
pkg-config = "0.3"
